Change push example to use URI Instead of URL